# cmakeproj

./: CMakeLists.txt
.devcontainer/: Dockerfile  Dockerfile.template  devcontainer.json
.github/workflows/: github-actions.yml
.github/workflows/old/: github-actions-old-1.yml  github-actions-old-3.yml
appconfig_0/: config.yaml  containerEnv  id_rsa  id_rsa.pub
